--- a/app/src/main/res/menu/menu_page.xml
+++ b/app/src/main/res/menu/menu_page.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    <item
+        android:id="@+id/img_form_recognize"
+        android:icon="@drawable/ic_form_recognize"
+        android:orderInCategory="1"
+        android:title="@string/menu_item_recognize"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/img_form_data"
+        android:icon="@drawable/ic_form_data"
+        android:orderInCategory="1"
+        android:title="@string/menu_item_data"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/img_pre"
         android:icon="@drawable/verticalright"
@@ -15,4 +26,6 @@
         android:orderInCategory="1"
         android:title="@string/menu_item_next"
         app:showAsAction="ifRoom" />
+
+
 </menu>
