--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -24,15 +24,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
                 <TextView
-                    android:id="@+id/toolbar_title"
+                    android:id="@+id/page_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:singleLine="true"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:layout_gravity="center_vertical"
+                    android:textSize="16sp" />
 
                 <ImageView
                     android:id="@+id/show_item"
